Removed divs for cards

--- a/index.html
+++ b/index.html
@@ -2,78 +2,12 @@
 <html lang="en" dir="ltr">
    <head>
       <meta charset="utf-8">
-      <link rel="stylesheet" type="text/css" href="style.css"
-
-      </style>
+      <link rel="stylesheet" type="text/css" href="style.css">
       <title></title>
    </head>
    <body>
-      <div class="deck">
-         <div class="card">
-            <img class="front" src="">
-            <img class="back" src="">
-         </div>
-         <div class="card">
-            <img class="front" src="">
-            <img class="back" src="">
-         </div>
-         <div class="card">
-            <img class="front" src="">
-            <img class="back" src="">
-         </div>
-         <div class="card">
-            <img class="front" src="">
-            <img class="back" src="">
-         </div>
-         <div class="card">
-            <img class="front" src="">
-            <img class="back" src="">
-         </div>
-         <div class="card">
-            <img class="front" src="">
-            <img class="back" src="">
-         </div>
-         <div class="card">
-            <img class="front" src="">
-            <img class="back" src="">
-         </div>
-         <div class="card">
-            <img class="front" src="">
-            <img class="back" src="">
-         </div>
-         <div class="card">
-            <img class="front" src="">
-            <img class="back" src="">
-         </div>
-         <div class="card">
-            <img class="front" src="">
-            <img class="back" src="">
-         </div>
-         <div class="card">
-            <img class="front" src="">
-            <img class="back" src="">
-         </div>
-         <div class="card">
-            <img class="front" src="">
-            <img class="back" src="">
-         </div>
-         <div class="card">
-            <img class="front" src="">
-            <img class="back" src="">
-         </div>
-         <div class="card">
-            <img class="front" src="">
-            <img class="back" src="">
-         </div>
-         <div class="card">
-            <img class="front" src="">
-            <img class="back" src="">
-         </div>
-         <div class="card">
-            <img class="front" src="">
-            <img class="back" src="">
-         </div>
+      <div id="deck">
       </div><!--/DECK-->
-
+   <script src="script.js"></script>
    </body>
 </html>
