--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
       </header>
       <div id="deck">
       </div><!--/DECK-->
-      <a class="push_button red" href="#"></a> 
+      <button class="button red" onclick"startGame()">Start</button> 
    <script src="script.js"></script>
    </body>
 </html>
