--- a/index.html
+++ b/index.html
@@ -4,14 +4,17 @@
       <meta charset="utf-8">
       <link rel="stylesheet" type="text/css" href="style.css">
       <link rel="stylesheet" type="text/css" href="button.css">
+      <link href="https://fonts.googleapis.com/css?family=PT+Sans" rel="stylesheet"> 
       <title></title>
    </head>
    <body>
       <header>
+         <h1>Space Invaders</h1>
+         <h3>Memory</h3>
       </header>
       <div id="deck">
       </div><!--/DECK-->
-      <button class="button red" onclick="startGame()">Start</button> 
+      <button class="button red" onclick="startGame()">Restart</button> 
    <script src="script.js"></script>
    </body>
 </html>
