CHanged button markup

--- a/index.html
+++ b/index.html
@@ -4,17 +4,19 @@
       <meta charset="utf-8">
       <link rel="stylesheet" type="text/css" href="style.css">
       <link rel="stylesheet" type="text/css" href="button.css">
-      <link href="https://fonts.googleapis.com/css?family=PT+Sans" rel="stylesheet"> 
+      <link href="https://fonts.googleapis.com/css?family=PT+Sans" rel="stylesheet">
       <title></title>
    </head>
    <body>
       <header>
-         <h1>Space Invaders</h1>
-         <h3>Memory</h3>
+         <!-- <h1>Space Invaders</h1>
+         <h3>Memory</h3> -->
       </header>
       <div id="deck">
       </div><!--/DECK-->
-      <button class="button red" onclick="startGame()">Restart</button> 
+      <button class="button red" onclick="restartGame()">
+         <i class="fa fa-repeat"></i>
+      </button>
    <script src="script.js"></script>
    </body>
 </html>
