Changed layout markup

--- a/index.html
+++ b/index.html
@@ -9,14 +9,15 @@
    </head>
    <body>
       <header>
-         <!-- <h1>Space Invaders</h1>
-         <h3>Memory</h3> -->
       </header>
       <div id="deck">
-      </div><!--/DECK-->
-      <button class="button red" onclick="restartGame()">
-         <i class="fa fa-repeat"></i>
-      </button>
+      </div>
+      <div class="controls">
+         <div class="header">
+            <img src="Images/spaceinvadershead.png"></img>
+		 </div><!--/header-->
+		 <button class="button red" onclick="restartGame()">PLAY</button>
+      </div><!--/controls-->
    <script src="script.js"></script>
    </body>
 </html>
